# tfunify

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .ruff.toml  CHANGELOG.md  DEVELOPMENT_WORKFLOW.md  README.md  codecov.yml  pyproject.toml  pytest.ini  run_tests.py
.github/: settings.yml
.github/workflows/: cli.yml  cly.yml  release.yml
docs/: conf.py  docs.rst
docs/source/: conf.py  index.rst
examples/: README.md  basic_usage.py  parameter_optimization.py  performance_comparison.py  portfolio_integration.py  real_data_analysis.py  requirements.txt
tests/: README.md  test_american.py  test_cli.py  test_comprehensive.py  test_core.py  test_european.py  test_european_basic.py  test_integration.py  test_smoke.py  test_tsmom.py
tfunify/: __init__.py  american.py  cli.py  core.py  data.py  european.py  tsmom.py
