[tool.poetry]
name = "tfunify"
version = "0.1.0"
description = "Unified trend-following systems: European (EWMA), American (breakout+ATR), and TSMOM in NumPy."
authors = ["Diogo Ribeiro <diogo.debastos.ribeiro@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/diogoribeiro7/tfunify"
repository = "https://github.com/diogoribeiro7/tfunify"
keywords = ["trend-following", "momentum", "cta", "quant", "timeseries"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "License :: OSI Approved :: MIT License",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Information Analysis"
]
packages = [{ include = "tfunify" }]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
numpy = "^2.0.0"

[tool.poetry.extras]
yahoo = ["yfinance>=0.2.40"]

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
mypy = "^1.10.0"
ruff = "^0.5.0"
pytest-cov = "^5.0.0"
types-setuptools = "*"
pre-commit = "^3.0.0"

[tool.poetry.scripts]
tfu = "tfunify.cli:main"

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = false
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
no_implicit_optional = true
check_untyped_defs = true
strict_equality = true

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-q"
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["tfunify"]

[tool.ruff]
target-version = "py310"
line-length = 100
select = ["E", "F", "I", "UP", "B"]
ignore = []

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"
